<resources>
    <string name="app_name">Netflix</string>
    <string name="setaParaBaixo" />
    <string name="menssagens" />
    <string name="volume" />
    <string name="Avaliação" />
    <string name="Episodios" />
    <string name="ImagemFIlme" />
    <string name="retroceder" />
    <string name="player" />
    <string name="Pause" />
    <string name="Serie_Episodio" />
    <string name="Titulo_Seriado" />
    <string name="tempoInicial">01:30</string>
    <string name="tempoFinal">45:03</string>
    <string name="nome">Alexandre Eustaquio</string>
</resources>